<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_time_line">Twitter</string>
    <string name="screenName">\@foo</string>
    <string name="Name">Poorva</string>
    <string name="createdAt">-1h</string>
    <string name="text">sample text</string>
    <string name="todo">TODO</string>
    <string name="label_rt">retweeted by poorva</string>
    <string name="title_activity_detailed_tweet">Tweet</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="hint_compose">What\'s happening?</string>
    <string name="label_tweet">Tweet</string>
    <string name="label_compose">Compose Tweet</string>
    <string name="label_retweets">RTs</string>
    <string name="label_favorites">Favorites</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>