<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"  >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:paddingLeft="3dp"
        android:text="@string/Name"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/tvBody"
       
        android:text="@string/createdAt"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:paddingLeft="3dp"
        android:text="@string/screenName"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_below="@+id/tvName"
        android:autoLink="all"
     	android:linksClickable="true"
        android:paddingLeft="3dp"
        android:text="@string/text" />
    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/llIcons"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/llIcons"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:weightSum="3"
        android:layout_below="@+id/tvBody" >

        <ImageButton
            android:focusable="false"
			android:focusableInTouchMode="false"
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:src="@drawable/ic_reply_gray" />

        <ImageButton
            android:focusable="false"
			android:focusableInTouchMode="false"
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite_gray" />

        <ImageButton
            android:focusable="false"
			android:focusableInTouchMode="false"
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_retweet_gray" />
    </LinearLayout>

</RelativeLayout>
