<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#4099FF" >

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#4099FF"
           
            android:textColor="#ffffff"
            android:text="@string/label_tweet" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnTweet"
            android:layout_alignBottom="@+id/btnTweet"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_marginLeft="4dp"
            android:text="@string/label_compose"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnTweet"
            android:layout_alignBottom="@+id/btnTweet"
            android:layout_toLeftOf="@+id/btnTweet"
            android:textColor="@android:color/white" />
        
   </RelativeLayout>

    <ImageView
        android:id="@+id/ivMyImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/space1"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:paddingLeft="3dp"
        android:layout_toRightOf="@+id/ivMyImage"
        android:text="TextView" 
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tvMyHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMyName"
        android:paddingLeft="3dp"
        android:layout_toRightOf="@+id/ivMyImage"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivMyImage"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hint_compose"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>