<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_rt" />

    <ImageView
        android:id="@+id/ivAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvrt"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvHandle"
        android:layout_marginTop="18dp"
        android:text="TextView" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvText"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivImage"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="3dp"
        android:layout_below="@+id/tvDateTime"
        android:text="@string/label_retweets"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvRetweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:paddingLeft="3dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRetweets"
        android:layout_alignBottom="@+id/tvRetweets"
        android:layout_toRightOf="@+id/tvRetweets"
        android:text="@string/label_favorites"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:paddingLeft="3dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivAuthor"
        android:layout_toRightOf="@+id/ivAuthor"
        android:paddingLeft="3dp"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAuthor"
        android:layout_toRightOf="@+id/ivAuthor"
        android:paddingLeft="3dp"
        android:text="TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

</RelativeLayout>
